--- a/client/package.json
+++ b/client/package.json
@@ -18,10 +18,11 @@
     "@nuxtjs/pwa": "^3.0.0-0"
   },
   "devDependencies": {
-    "nodemon": "^1.18.9",
+    "@nuxtjs/tailwindcss": "^1.1.2",
     "@nuxtjs/vuetify": "^1.0.0",
     "eslint-config-prettier": "^4.1.0",
     "eslint-plugin-prettier": "^3.0.1",
+    "nodemon": "^1.18.9",
     "prettier": "^1.16.4"
   }
 }
