--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^1.1.2",
     "@nuxtjs/vuetify": "^1.0.0",
+    "@mdi/font": "^4.4.95",
     "eslint-config-prettier": "^4.1.0",
     "eslint-plugin-prettier": "^3.0.1",
     "nodemon": "^1.18.9",
